--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.3.0",
     "autoprefixer": "^10.4.14",
-    "concurrently": "^8.1.0",
+    "concurrently": "^8.2.0",
     "cssnano": "^6.0.1",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.24",
@@ -30,7 +30,7 @@
     "postcss-preset-env": "^8.4.2",
     "source-map-support": "^0.5.21",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.0-dev.20230611"
   },
   "dependencies": {
     "@types/react-dom": "^18.2.4",
