--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timekeeper",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app to help keep track of how you spent your time. Created by Daniel Kolgushev",
   "main": "index.js",
   "scripts": {
     "build:css": "postcss client/css-unbuilt/main.css -o client/css/main.css",
@@ -12,17 +12,26 @@
     "build:all": "npm run build:ts && npm run build:css",
     "dev": "concurrently \"npm run watch:all\" \"nodemon --exec \\\"npm run start:ts:nocomp\\\"\"",
     "start:ts": "npm run build:all && npm run start:ts:nocomp",
-    "start:ts:nocomp": "electron ."
+    "start:ts:nocomp": "electron .",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
-  "author": "EPCR",
+  "author": "Daniel Kolgushev",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
     "cssnano": "^6.0.1",
+    "electron": "25.1.0",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
@@ -35,7 +44,7 @@
   "dependencies": {
     "@types/react-dom": "^18.2.4",
     "dotenv": "^16.1.4",
-    "electron": "^25.1.0",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0"
