--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     },
     "include": [
         "**/*.ts",
-        "**/*.tsx",
+        "**/*.tsx", "client/js/compose/not-chat-gpt.js",
     ],
     "exclude": [
         "node_modules",
