--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build:css": "postcss client/css-unbuilt/main.css -o client/css/main.css",
     "watch:css": "postcss client/css-unbuilt/main.css -o client/css/main.css -w",
-    "build:ts": "tsc",
-    "watch:ts": "tsc --watch",
+    "build:ts": "tsc tsconfig.json",
+    "watch:ts": "tsc tsconfig.json --watch",
     "watch:all": "concurrently \"npm run watch:ts\" \"npm run watch:css\"",
     "build:all": "npm run build:ts && npm run build:css",
     "dev": "concurrently \"npm run watch:all\" \"nodemon --exec \\\"npm run start:ts:nocomp\\\"\"",
@@ -39,7 +39,7 @@
     "postcss-preset-env": "^8.4.2",
     "source-map-support": "^0.5.21",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.2.0-dev.20230611"
+    "typescript": "^5.2.0-dev.20230612"
   },
   "dependencies": {
     "@types/react-dom": "^18.2.4",
