--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build:css": "postcss client/css-unbuilt/main.css -o client/css/main.css",
     "watch:css": "postcss client/css-unbuilt/main.css -o client/css/main.css -w",
-    "build:ts": "tsc tsconfig.json",
-    "watch:ts": "tsc tsconfig.json --watch",
+    "build:ts": "tsc -p tsconfig.json",
+    "watch:ts": "tsc -p tsconfig.json --watch",
     "watch:all": "concurrently \"npm run watch:ts\" \"npm run watch:css\"",
     "build:all": "npm run build:ts && npm run build:css",
     "dev": "concurrently \"npm run watch:all\" \"nodemon --exec \\\"npm run start:ts:nocomp\\\"\"",
@@ -37,7 +37,6 @@
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.4.2",
-    "source-map-support": "^0.5.21",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.2.0-dev.20230612"
   },
@@ -45,7 +44,6 @@
     "@types/react-dom": "^18.2.4",
     "dotenv": "^16.1.4",
     "electron-squirrel-startup": "^1.0.0",
-    "express": "^4.18.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0"
   }
