--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
     "cssnano": "^6.0.1",
-    "electron": "25.1.0",
+    "electron": "^25.1.0",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
