--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.4.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.2.0-dev.20230612"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@types/react-dom": "^18.2.4",
