--- a/package.json
+++ b/package.json
@@ -20,31 +20,34 @@
   "author": "Daniel Kolgushev",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^6.1.1",
-    "@electron-forge/maker-deb": "^6.1.1",
-    "@electron-forge/maker-rpm": "^6.1.1",
-    "@electron-forge/maker-squirrel": "^6.1.1",
-    "@electron-forge/maker-zip": "^6.1.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.0",
-    "autoprefixer": "^10.4.14",
-    "concurrently": "^8.2.0",
-    "cssnano": "^6.0.1",
-    "electron": "^25.8.4",
-    "nodemon": "^3.0.1",
-    "postcss": "^8.4.31",
-    "postcss-cli": "^10.1.0",
-    "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^9.1.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-rpm": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
+    "@electron-forge/maker-zip": "^7.8.1",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.13",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
+    "cssnano": "^7.0.7",
+    "electron": "^37.2.1",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1",
+    "postcss-preset-env": "^10.2.4",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@types/react-dom": "^18.2.4",
-    "dotenv": "^16.1.4",
-    "electron-squirrel-startup": "^1.0.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0"
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "dotenv": "^17.2.0",
+    "electron-squirrel-startup": "^1.0.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   }
 }
